--- a/readme
+++ b/readme
@@ -9,9 +9,9 @@ this repository will be generate all the newsletters systeme's of agriconomie
 explain of each documents
 
 1.app
-  1.1  - css this is where the scss is compilate
+  1.1 - css this is where the scss is compilate
   1.2 - data this is where you can change global varriable (lang type tracking ....)
-  1.3 - scss this is were you change corp css style
+  1.3 - scss this is where you change corp css style
   1.4 - views
     1.4.1 - layout : this contain the main layout containing all block
     1.4.2 - all mixins are there (title produit quote .....)
@@ -23,7 +23,7 @@ explain of each documents
 2.build
   2.1 - this is where i is compilate build/index.html in fr to be with the comand gulp be
   2.2 - this is where the build/index is minified with the command : gulp inilinecss
-  2.3 - this is the result of the compilation of the generation of app/index.html  with css inline
+  2.3 - this is where the result of the compilation of the generation of app/index.html  with css inline
   
 3.nodeModule is generate here
 
